name:                battleship
version:             0.1.0.0
synopsis:            An API for simulating a game of 'Battleship'.
description:         An API for simulating a game of 'Battleship'; see https://github.com/ambiata/interview/blob/master/battleship.md
homepage:            https://github.com/damncabbage/haskell-battleship
license:             Apache-2.0
license-file:        LICENSE.md
author:              Rob Howard
maintainer:          rob@robhoward.id.au
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base           >= 4.7 && < 4.8
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Data.Battleship

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base           >= 4.7 && < 4.8
                     , battleship
                     , hspec          >= 1.8 && < 3
                     , QuickCheck     == 2.*
