name:                battleship
version:             0.1.0.0
synopsis:            An API for simulating a game of 'Battleship'.
description:         An API for simulating a game of 'Battleship'; see https://github.com/ambiata/interview/blob/master/battleship.md
homepage:            https://github.com/damncabbage/haskell-battleship
license:             Apache-2.0
license-file:        LICENSE.md
author:              Rob Howard
maintainer:          rob@robhoward.id.au
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-implicit-prelude -fwarn-missing-import-lists
  hs-source-dirs:      src
  exposed-modules:     Data.Battleship
  build-depends:       base                  >= 4.7 && < 4.8
                     , random                == 1.*
                     , random-shuffle        >= 0.0.4 && < 0.1
                     , MonadRandom           >= 0.3 && < 0.5

test-suite spec
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base                  >= 4.7 && < 4.8
                     , battleship
                     , hspec                 >= 1.8 && < 3
                     , QuickCheck            == 2.*
                     , mtl
                     , transformers
